[build-system]
requires = ["setuptools>=45.0.0", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
experimental-string-processing = true

[tool.pydocstyle]
match = '.*\.py'
select = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D412",
    "D414",
    "D416",
    "D417",
]

[tool.cldr]
github_repo = "https://github.com/bbugyi200/cldr"
# Do NOT change the 'current_version' option manually!
current_version = "2.3.1"
# Update the 'version_part_to_bump' option via `bumper {patch | minor | major}`
# when you want to release a new version of this project.
version_part_to_bump = "none"
